# timetracking

./: .coverage  .gitignore  LICENSE  MANIFEST.in  README.md  database.py  email_export.py  gui.py  install.sh  main.py  password_utils.py  pdf_export.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  run_tests.sh  setup.py
tests/: __init__.py  conftest.py  test_database.py  test_database_comprehensive.py  test_database_edge_cases.py  test_email_export.py  test_email_export_comprehensive.py  test_gui.py  test_gui_dialogs.py  test_gui_edge_cases.py  test_gui_integration.py  test_gui_logic.py  test_gui_validation.py  test_integration.py  test_main.py  test_password_utils.py  test_password_utils_comprehensive.py  test_pdf_export.py  test_pdf_export_comprehensive.py
timetracking/: __init__.py  database.py  email_export.py  gui.py  main.py  password_utils.py  pdf_export.py
