[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timetracking"
version = "1.0.5"
description = "A Python time tracking application with GUI, PDF export, and email functionality"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ricardo Nolan", email = "ricardo@example.com"}
]
maintainers = [
    {name = "Ricardo Nolan", email = "ricardo@example.com"}
]
keywords = ["time tracking", "productivity", "gui", "pdf", "email", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
requires-python = ">=3.7"
dependencies = [
    "reportlab==4.0.4",
    "Pillow",
    "pytest",
    "pytest-cov",
    "cryptography",
]

[project.urls]
Homepage = "https://github.com/ricardo-nolan/timetracking"
Repository = "https://github.com/ricardo-nolan/timetracking"
Issues = "https://github.com/ricardo-nolan/timetracking/issues"

[project.scripts]
timetracking = "timetracking.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["timetracking*"]

[tool.setuptools.package-data]
timetracking = ["*.txt", "*.md"]
